test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 27 Mar 2026 13:20:42 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="9v0MyLQlLhj/LGa4Pvkf1UcXA3qVB9oC", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}